# RAGenius

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
api/: app.py  config.py  helper_function.py  models.py  multi_provider_rag_api.py
api/src/: embedding.py  search.py  vectorstore.py
notebooks/: document.ipynb
src/: data_loader.py  embedding.py  search.py  vectorstore.py
templates/: index.html  mpr_index.html
